Thu Jan 31 06:24:13 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,gen-myhtmltags,myhtmlparse.cc,myhtmlparse.tokens: Use
	  a generated compact and efficient table to convert HTML tag names
	  to enum codes, which we can then use a C switch statement to
	  dispatch.  The table first checks the token length, and then does a
	  binary chop on tokens of the same length.  This is both faster and
	  smaller than the approach we were using, with the benefit that the
	  table is auto-generated.

Thu Jan 31 06:21:22 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Jan 28 23:41:21 GMT 2013  Olly Betts <olly@survex.com>

	* utf8convert.cc,utf8converttest.cc: Always use our built-in
	  conversion code for the character sets it can handle, and only use
	  iconv as a fall-back.  This gives us more consistent results, and
	  in particular means we now handle BOMs better (at least with GNU
	  iconv).

Mon Jan 28 23:16:08 GMT 2013  Olly Betts <olly@survex.com>

	* utf8convert.cc,utf8converttest.cc: A lot of data labelled as
	  "iso-8859-1" is actually "windows-1252".  The two only differ
	  in characters which are control characters in iso-8859-1, so
	  assume the latter when we see the former.

Mon Jan 28 23:13:24 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Use charset name "iso-8859-1" in lower case
	  consistently.

Thu Jan 24 08:44:24 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship jsonescape.h.

Thu Jan 24 07:21:17 GMT 2013  Olly Betts <olly@survex.com>

	* jsonescape.cc: Add missing header includes.

Thu Jan 24 03:08:39 GMT 2013  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Document $json and $jsonarray.

Thu Jan 24 02:55:53 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,jsonescape.cc,jsonescape.h,jsonesctest.cc,query.cc:
	  Add new $json and $jsonarray OmegaScript commands.

Wed Jan 09 11:53:19 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.
